<resources>
    <string name="app_name">TDribbble</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_login">登陆Dribbble</string>
    <string name="str_click_login">点击头像登陆</string>
    <string name="str_welcome">欢迎回来TDribbble</string>
    <string name="str_home">首页</string>
    <string name="str_favorite">收藏</string>
    <string name="str_shots">作品</string>
    <string name="str_follower">粉丝</string>
    <string name="action_large_image">仅大图</string>
    <string name="action_small_image">仅小图</string>
    <string name="action_large_info">大图详情</string>
    <string name="str_loading_more">正在加载...</string>
    <string name="str_avatar_tran">avatarTran</string>
    <string name="str_name_tran">nameTran</string>
    <string name="str_shots_tran">shotsTran</string>
    <string name="str_finish_app">再次返回退出应用</string>

    <string name="str_error">网络错误</string>
    <string name="str_about">关于</string>
    <string name="str_settings">设置</string>
    <string name="str_comment">评论一下</string>
    <string name="str_thinks">感谢开源源代码许可</string>
    <string name="str_attachments">附件</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_github">https://github.com/tangyichao/TDribbble</string>
    <string name="str_open">项目开源主页</string>
    <string name="str_clean">清楚缓存</string>
    <string name="str_share">分享</string>
    <string name="str_empty">空空如也</string>
</resources>
