<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_red_24dp"
            android:title="@string/str_home" />
        <item
            android:id="@+id/nav_shots"
            android:icon="@drawable/ic_shot_red_24dp"
            android:title="@string/str_shots" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_red_24dp"
            android:title="@string/str_favorite" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_red_24dp"
                android:title="@string/str_settings" />
        </menu>
    </item>

</menu>
