<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@mipmap/ic_action_large_info"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_large_image"
                android:icon="@mipmap/ic_action_large"
                android:orderInCategory="100"
                android:title="@string/action_large_image" />
            <item
                android:id="@+id/action_small_image"
                android:icon="@mipmap/ic_action_small"
                android:orderInCategory="100"
                android:title="@string/action_small_image" />
            <item
                android:id="@+id/action_large_info"
                android:icon="@mipmap/ic_action_large_info"
                android:orderInCategory="100"
                android:title="@string/action_large_info" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:title=""
        app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp" />
</menu>
