<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="@dimen/nav_header_height">
    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/nav_header_height" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:fitsSystemWindows="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_default_avatar"
        android:transitionName="@string/str_avatar_tran" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:transitionName="@string/str_name_tran"
        android:text="@string/str_click_login"
        android:textColor="@color/white" />
    </LinearLayout>


</FrameLayout>
