<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_show_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_default_avatar"
            android:transitionName="@string/str_avatar_tran" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextClick"
                    android:textSize="14sp"
                    android:transitionName="@string/str_name_tran" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="2dp"
                    android:drawableStart="@drawable/ic_location_grey_12dp"
                    android:ellipsize="none"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_body"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:drawableStart="@drawable/ic_favorite_grey_12dp"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_like_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_favorite_grey_24dp"
            android:gravity="center"
            android:text="@string/str_favorite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_favorite_grey_24dp"
            android:gravity="center"
            android:text="@string/str_favorite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_favorite_grey_24dp"
            android:gravity="center"
            android:text="@string/str_favorite"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>
