<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="48dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">
            <!--scroll|enterAlwaysCollapsed|exitUntilCollapsed-->
            <com.tyc.tdribbble.view.widget.BadgedFourThreeImageView
                android:id="@+id/iv_shots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:transitionName="@string/str_shots_tran"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="8dp" />

            <View
                android:layout_width="match_parent"
                android:background="@color/iconGrey"
                android:layout_height="0.5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:transitionName="@string/str_avatar_tran"
                    android:layout_marginEnd="8dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="4dp">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextClick"
                            android:transitionName="@string/str_name_tran"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:drawableStart="@drawable/ic_location_grey_12dp"
                            android:layout_marginStart="8dp"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fl_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/tv_attachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_attachments_red_24dp"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_margin="8dp" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarStyle="outsideOverlay"
                android:background="@color/bg_white_e"
                android:visibility="visible" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_white_24dp"
        app:layout_anchor="@id/app_bar"
        app:backgroundTint="@color/colorTextClick"
        app:layout_anchorGravity="bottom|end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:background="@color/bg_white_e"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="10dp"
            android:src="@mipmap/ic_default_avatar" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_comment"
        />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="10dp"
            android:src="@drawable/ic_send_red_24dp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
